<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:stretchColumns="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jcc.auctionclient.AddItemFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:textSize="@dimen/label_font_size" android:gravity="center" android:padding="@dimen/title_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item_title" />
    <TableRow>
        <TextView android:text="@string/item_name" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/itemName" android:inputType="text"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/item_desc" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/itemDesc" android:inputType="text"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/remark" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/itemRemark" android:inputType="text"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/init_price" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/initPrice" android:inputType="numberDecimal"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/avail_time" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/availTime" android:entries="@array/availTime"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/item_kind" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/itemKind"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center">
        <Button android:id="@+id/bnAdd" android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/bnCancel" android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</TableLayout>
