<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:stretchColumns="1"
    tools:context="com.jcc.auctionclient.Login">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:scaleType="fitCenter" android:src="@drawable/logo"
        android:contentDescription="@string/hello"/>
    <TextView android:text="@string/welcome" android:id="@+id/TextView"
        android:textSize="@dimen/label_font_size" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:gravity="center"
        android:padding="@dimen/title_padding"/>
    <TableRow>
        <TextView android:text="@string/user_name" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/userEditText" android:inputType="text" android:text="tomcat"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/user_pass" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <EditText android:text="tomcat" android:id="@+id/pwdEditText" android:inputType="textPassword"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</TableLayout>
