<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:stretchColumns="1"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TableRow>
        <TextView android:text="@string/item_name" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/itemName" style="@style/tv_show"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/item_kind" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/itemKind" style="@style/tv_show"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/win_price" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/maxPrice" style="@style/tv_show"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/remark" android:textSize="@dimen/label_font_size"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <TextView android:id="@+id/itemRemark" style="@style/tv_show"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </TableRow>
</TableLayout>